<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <CheckBox
        android:id="@+id/checkBoxSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="122dp"
        android:text="@string/sound_checkbox" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="210dp"
        android:layout_height="173dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="230dp">

        <RadioButton
            android:id="@+id/radioFast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/rb_fast" />

        <RadioButton
            android:id="@+id/radioSlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/rb_slow" />

        <RadioButton
            android:id="@+id/radioNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_none" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="28dp"
        android:text="@string/settings_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="202dp"
        android:text="@string/amims_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="83dp"
        android:text="@string/sound_title" />

</RelativeLayout>